--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
