fix: error in get path for some commponents

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-easy-grid": "^0.2.2",
     "react-native-infinite-scroll-view": "^0.4.5",
+    "react-native-share": "^4.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
